--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "env TAILWIND_MODE=watch NODE_ENV=development next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "svg": "svgr -d components/icons components/icons/svgs"
   },
   "dependencies": {
     "next": "12.3.0",
@@ -15,6 +16,7 @@
     "sass": "^1.54.9"
   },
   "devDependencies": {
+    "@svgr/cli": "^6.3.1",
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
