--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "svg": "svgr -d components/icons components/icons/svgs"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "mongodb": "^4.11.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
