--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "svg": "svgr -d components/icons components/icons/svgs"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "mongodb": "^4.11.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.5",
     "sass": "^1.54.9"
   },
   "devDependencies": {
