--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
+    "formik": "^2.2.9",
     "mongodb": "^4.11.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.5",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@svgr/cli": "^6.3.1",
