--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ next-env.d.ts
 #css
 *.module.css
 *.module.css.map
+
+#pwa files
+**/public/sw.js
+**/public/sw.js.map
+**/public/workbox-*.js
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
