--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "axios": "^1.1.3",
     "formik": "^2.2.9",
     "mongodb": "^4.11.0",
-    "next": "12.3.0",
+    "next": "^13.2.4",
+    "next-auth": "^4.18.7",
     "next-pwa": "^5.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.5",
     "sass": "^1.54.9",
@@ -30,7 +31,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0",
+    "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
